--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo-google-fonts/work-sans": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/portal": "^1.0.14",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
